--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,9 +28,14 @@ jobs:
       run: |
         pyinstaller build.spec --noconfirm
     
+    - name: List dist contents
+      run: |
+        dir dist
+    
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
       with:
         name: XUE风险穿透终端-Windows
         path: dist/XUE风险穿透终端.exe
+        if-no-files-found: warn
         retention-days: 30
