--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -31,17 +31,11 @@ jobs:
     - name: List dist contents
       run: |
         dir dist
-        dir "dist\XUE风险穿透终端"
-    
-    - name: Create ZIP archive
-      run: |
-        Compress-Archive -Path "dist\XUE风险穿透终端" -DestinationPath "dist\XUE风险穿透终端-Windows.zip"
-      shell: pwsh
     
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
       with:
         name: XUE风险穿透终端-Windows
-        path: dist/XUE风险穿透终端-Windows.zip
+        path: dist/XUE风险穿透终端.exe
         if-no-files-found: warn
         retention-days: 30
